manifests/dev/komga/Deployment-komga.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: komga
    app.kubernetes.io/name: komga
  name: komga
  namespace: komga
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: komga
      app.kubernetes.io/name: komga
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: komga
        app.kubernetes.io/name: komga
    spec:
      automountServiceAccountToken: true
      containers:
        - env:
            - name: PUID
              value: "1000"
            - name: PGID
              value: "1000"
            - name: TZ
              value: Etc/UTC
            - name: SERVER_PORT
              value: "25600"
          image: gotson/komga:latest
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            tcpSocket:
              port: 25600
          name: komga
          ports:
            - containerPort: 25600
              name: http
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /data
              name: data
      serviceAccountName: default
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: komga-komga-config
        - name: data
          persistentVolumeClaim:
            claimName: komga-komga-data
