manifests/dev/komga/Service-komga.yaml
apiVersion: v1
kind: Service
metadata:
  name: komga
  namespace: komga
spec:
  ports:
    - name: http
      port: 25600
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: komga
    app.kubernetes.io/name: komga
  type: ClusterIP
