manifests/dev/komga/Ingress-komga-local.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: komga-local
  namespace: komga
spec:
  ingressClassName: traefik
  rules:
    - host: komga.home.kronkltd.net
      http:
        paths:
          - backend:
              service:
                name: komga
                port:
                  name: http
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - komga.home.kronkltd.net
      secretName: komga-local-tls
