manifests/dev/komga/Ingress-komga.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: komga
  namespace: komga
spec:
  ingressClassName: traefik
  rules:
    - host: komga.home.kronkltd.net
      http:
        paths:
          - backend:
              service:
                name: komga
                port:
                  name: http
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - komga.home.kronkltd.net
